updated logo marquee, fixed gap/padding issues with the modules

--- a/src/public/css/components.css
+++ b/src/public/css/components.css
@@ -310,7 +310,7 @@
 
 @media (max-width: 767px) {
   .logo-marquee__img {
-    height: 20rem;
+    height: 18rem;
   }
 
   .logo-marquee__slide {
