--- a/src/public/css/globalstyles.css
+++ b/src/public/css/globalstyles.css
@@ -51,6 +51,7 @@
     /* Text colors */
     --text-color-primary: #003934;
     --text-color-emphasis: #AA1717;
+    --text-color-footer: #ffffff;
 
     /* Page color */
     --page-color-primary: #ffffff;
@@ -63,6 +64,7 @@
     --bg-module-gradient-green-moderate: linear-gradient(135deg, #def7e7 0%, #c0eacb 50%, #93d9a5 100%);
     --bg-module-gradient-purple-moderate: linear-gradient(135deg, #e3e9ff 0%, #b7c7ff 50%, #88abf2 100%);
     --bg-module-gradient-red-moderate: linear-gradient( 135deg,#fdeeee 0%,#f6caca 50%,#ee8f8f 100%);
+    --bg-footer: #000000;
 
     /* CTA colors background */
     --bg-primary-cta: #000000;
@@ -96,7 +98,6 @@
 
     /* SwiperJS pagination spacing */
     --swiper-pagination-bottom: 0px;
-
 }
 
 /* ===========================
@@ -112,6 +113,7 @@
         --page-padding: 1rem;
         --card-padding: 0.75rem;
         --carousel-card-padidng: 1.6rem;
+        --hero-padding: 2rem 0.5rem 1.2rem 0.5rem;
         --module-padding: 0.5rem;
         --header-padding: 1rem 2rem;
         --pagination-padding: 0.4rem;
@@ -151,6 +153,11 @@
         /* SwiperJS pagination spacing */
         --swiper-pagination-bottom: 5px;
 
+        /* --header-padding: 1rem 4rem;
+        --footer-padding: 1rem 2rem;
+        --footer-icon-size: 6rem;
+        --footer-copy-size: 1.25rem; */
+
     }
 }
 
@@ -174,6 +181,11 @@
 
         /* SwiperJS pagination spacing */
         --swiper-pagination-bottom: 1px;
+
+        /* --header-padding: 1rem 8rem;
+    --footer-padding: 2rem 6rem;
+    --footer-icon-size: 8rem;
+    --footer-copy-size: 1.75rem; */
     }
 }
 
@@ -219,6 +231,9 @@
         --fs-cta: 3.0rem;
         --fs-card-heading: 3.2rem;
         --fs-eyebrow: 2.0rem;
+
+        /* --header-padding: 2rem 52rem;
+    --footer-padding: 4rem 50rem; */
     }
 }
 
