--- a/src/public/css/header-footer.css
+++ b/src/public/css/header-footer.css
@@ -114,7 +114,6 @@
         background-color: var(--color-page-bg);
         overflow: hidden;
         max-height: 0;
-        /* similar to display: none */
         transform: translateX(100%);
         transition: transform 0.4s ease-in-out;
         z-index: 999;
@@ -140,17 +139,10 @@
 
 /*__FOOTER_START__*/
 .site-footer {
-    color: var(--text-color-primary);
-    
-
+    color: var(--text-color-footer);
     text-align: center;
-    /* background-color: var(--bg-footer); */
-    background-color: inherit;
+    background-color: var(--bg-footer);
 }
-
-/* .site-footer p {
-    color: white;
-} */
 
 .site-footer-wrapper {
     display: flex;
